5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1758_672.log
== SUBMITION (2019-05-23 10:19:20) 
-- CODE:
from numpy import*
n=int(input(("entre com a quantidade de posicoes:"))
v=ones(n,dtype=int)
-- EXECUTION TIME:
0.142391
-- ERROR:
  File "/home/codebench/codes/1758/672/main.py", line 3
    v=ones(n,dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:19:27) 
-- CODE:
from numpy import*
n=int(input(("entre com a quantidade de posicoes:"))
v=ones(n, dtype=int)
-- EXECUTION TIME:
0.216518
-- ERROR:
  File "/home/codebench/codes/1758/672/main.py", line 3
    v=ones(n, dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:19:29) 
-- CODE:
from numpy import*
n=int(input(("entre com a quantidade de posicoes:"))
v=ones(n, dtype=int)
-- EXECUTION TIME:
0.199072
-- ERROR:
  File "/home/codebench/codes/1758/672/main.py", line 3
    v=ones(n, dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:19:57) 
-- CODE:
from numpy import*
n=int(input("entre com a quantidade de posicoes:"))
v=ones(n, dtype=int)
print(v)
-- EXECUTION TIME:
0.388818
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:40:29) 
-- CODE:
from numpy import*

n=input("entre com o numero de repetiçoes:")

vet=ones(n,dtype=int)
print(vet)
-- EXECUTION TIME:
0.579738
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/672/main.py", line 5, in <module>
    vet=ones(n,dtype=int)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/numeric.py", line 223, in ones
    a = empty(shape, dtype, order)
TypeError: 'str' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:40:33) 
-- CODE:
from numpy import*

n=input("entre com o numero de repetiçoes:")

vet=ones(n,dtype=int)
print(vet)
-- EXECUTION TIME:
0.515399
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/672/main.py", line 5, in <module>
    vet=ones(n,dtype=int)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/numeric.py", line 223, in ones
    a = empty(shape, dtype, order)
TypeError: 'str' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:40:34) 
-- CODE:
from numpy import*

n=input("entre com o numero de repetiçoes:")

vet=ones(n,dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:40:45) 
-- CODE:
from numpy import*

n=input("entre com o numero de repetiçoes:")

vet=ones(n,dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:41:18) 
-- CODE:
from numpy import*

n=input("entre com o numero de repeticoes:")

vet=ones(n,dtype=int)
print(vet)
-- EXECUTION TIME:
0.363723
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/672/main.py", line 5, in <module>
    vet=ones(n,dtype=int)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/numeric.py", line 223, in ones
    a = empty(shape, dtype, order)
TypeError: 'str' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:41:21) 
-- CODE:
from numpy import*

n=input("entre com o numero de repeticoes:")

vet=ones(n,dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:42:25) 
-- CODE:
from numpy import*

n=input("entre com o numero de repeticoes:")

vet=ones(n)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:43:15) 
-- CODE:
import numpy from*

n=input("entre com o numero de repeticoes:")

vet=ones(n)
print(vet)
-- ERROR:
File "XXXX", line 1
    import numpy from*
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:43:59) 
-- CODE:
from numpy import*

n=input("entre com o numero de repeticoes:")

vet= ones(n,dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:45:53) 
-- CODE:
from numpy import*

n=int(input("entre com o numero de repeticoes:"))

vet= ones(n,dtype=int)
print(vet)
-- EXECUTION TIME:
0.426907
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
